# meteora-trading

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/specs/: 2026-05-05-wallet-auth-design.md
frontend/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/architecture/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashbord/: page.tsx
frontend/app/proof/: page.tsx
frontend/app/safety/: page.tsx
frontend/components/architecture/: BoundaryExplainer.tsx  DiagramFlow.tsx  DiagramSection.tsx
frontend/components/dashboard/: ActivityFeed.tsx  AdminPanel.tsx  AgentStatePanel.tsx  InlineBalance.tsx  (+9 more)
frontend/lib/: api.ts  auth.ts  motion.ts
node-helper/: index.js  package-lock.json  package.json  test_amount_conversion.js  vault.js
references/: colosseum-submission-scripts-may2026.md
scripts/: live_gate_check.py  submit_to_colosseum.sh
sql/: 001_initial_schema.sql  002_actions_log_is_dry_run.sql
src/: config.py  main.py
src/dashboard/: admin.py  api.py  auth.py  vault_api.py  wallet.py
src/db/: __init__.py
src/discovery/: client.py  models.py  scorer.py
src/position/: manager.py  models.py
src/rebalance/: adaptive.py  decision.py  guards.py  memo.py  tuner.py
src/vault/: capital.py  client.py
tests/: test_adaptive.py  test_decision.py  test_node_helper.py  test_position_manager.py  test_scorer.py  test_tuner.py  test_vault_api.py  test_vault_capital.py  test_wallet.py
vault-program/: Anchor.toml
(+32 files in other folders)
