[project]
name = "meteora-agent"
version = "0.1.0"
description = "Autonomous Meteora DLMM liquidity discovery and rebalancing agent on Solana"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pynacl>=1.5.0",
    "pyjwt>=2.8.0",
    "base58>=2.1.1",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
